--- a/myapp-kubernetes/react-kubernetes/react-service.yaml
+++ b/myapp-kubernetes/react-kubernetes/react-service.yaml
@@ -1,7 +1,6 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: myapp
   name: react-service
 spec:
   selector:
@@ -9,4 +8,4 @@ spec:
   ports:
     - protocol: TCP
       port: 3000
-  type: LoadBalancer
+  type: ClusterIP
